# applet-window-buttons6

./: CHANGELOG.md  CMakeLists.txt  INSTALLATION.md  install.sh  uninstall.sh
libappletdecoration/: CMakeLists.txt  appletdecorationplugin.cpp  appletdecorationplugin.h  auroraetheme.cpp  auroraetheme.h  buttonsmodel.cpp  buttonsmodel.h  commontools.cpp  commontools.h  config-decoration.h.cmake  decorationpalette.cpp  decorationpalette.h  decorationsmodel.cpp  decorationsmodel.h  environment.cpp  environment.h  kwinconfig.cpp  kwinconfig.h  padding.cpp  padding.h  previewbridge.cpp  previewbridge.h  previewbutton.cpp  previewbutton.h  previewclient.cpp  previewclient.h  previewsettings.cpp  previewsettings.h  previewshareddecoration.cpp  previewshareddecoration.h  schemecolors.cpp  schemecolors.h  schemesmodel.cpp  schemesmodel.h  themeextended.cpp  themeextended.h  types.cpp  types.h
libappletdecoration/qml/: AuroraeButton.qml
org/kde/appletdecoration/: CMakeLists.txt  appletdecorationplugin.cpp  appletdecorationplugin.h  auroraetheme.h  decorationsmodel.h  environment.h  padding.h  previewbridge.h  previewbutton.h  previewclient.cpp  previewclient.h  previewsettings.h  previewshareddecoration.h  schemecolors.cpp  schemesmodel.h  themeextended.h
package/contents/code/: tools.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: PlasmaTasksModel.qml  main.qml
package/contents/ui/config/: ColorsComboBox.qml  ConfigBehavior.qml  ConfigGeneral.qml  DecorationsComboBox.qml  LockItem.qml  OrderableListView.qml
